Add URL to slides

--- a/slides.html
+++ b/slides.html
@@ -11,7 +11,8 @@
 class: center, middle, inverse
 
 # Non-Relational Databases
-Adam Brenecki, Adrian Colbert
+Adam Brenecki, Adrian Colbert  
+adambrenecki.github.io/non-relational-databases
 
 ---
 ## What is a non-relational database?
