Update definition of non-relational DB

--- a/slides.html
+++ b/slides.html
@@ -17,7 +17,7 @@ adambrenecki.github.io/non-relational-databases
 ---
 ## What is a non-relational database?
 
-- Database systems that don't use a relational model
+- Any database that doesn't store data in tabular relations
 - Also referred to as **NoSQL**
 - ...sometimes
 
