Testing image addition

--- a/slides.html
+++ b/slides.html
@@ -27,6 +27,10 @@ Adam Brenecki, Adrian Colbert
 - Graph databases
 - BigTable
 
+???
+
+Adrian thinks NoSQL is a stupid term and sounds like a Microsoft product.
+
 ---
 class: center, middle, inverse
 
@@ -211,6 +215,25 @@ class: center, middle, inverse
 ## Graph Databases
 
 ---
+
+## What is a graph database?
+
+###Example: Graph-Oriented Object Database Model (GOOD)
+
+- Nodes with relationships
+- Comparable to a multidimensional linked list
+- Far more variations than just the example of GOOD
+
+![An example of a simple GOOD database](images/good_example.png)
+
+.footnote.citation[(Gyssens et. al., 1994)]
+
+???
+
+- Functions like a multidimensional linked list
+- Depending on implementation, can be constructed and queried with a common programming language, like C++
+- Can be traversed or queried with recursive methods
+
 
 
 
