Make slideshow the index so that the GitHub Pages URL is nicer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Focusing on Apache CouchDB
 
 ???
 
-Now, we move on to document-oriented databases. There's a whole range of them out there, so we're going to focus on CouchDB, a document-oriented DBMS made by the Apache Foundation.
+Now, we move on to document-oriented databases. There's a whole range of them out there, and unlike relational DBMSes they work very differently, so we're going to focus on CouchDB, a document-oriented DBMS made by the Apache Foundation.
 
 ---
 
