--- a/slides.html
+++ b/slides.html
@@ -225,8 +225,6 @@ class: center, middle, inverse
 - Comparable to a multidimensional linked list
 - Far more variations than just the example of GOOD
 
-![An example of a simple GOOD database](images/good_example.png)
-
 .footnote.citation[(Gyssens et. al., 1994)]
 
 ???
@@ -237,7 +235,18 @@ class: center, middle, inverse
 
 ---
 
+![An example of a simple GOOD database](images/good_example.png)
 
+.footnote.citation[(Gyssens et. al., 1994)]
+
+---
+
+## Why use a graph database?
+
+- Modern applications that emphasise the connections between data as much as, if not more than, the data itself
+- Primary example is social networking due to many-to-many associations
+
+.footnote.citation{(Angles & Gutierrez, 2008)]
 
 
 
