Add final slide with link to download the slideshow

--- a/index.html
+++ b/index.html
@@ -249,14 +249,15 @@ class: center, middle, inverse
 - Can be traversed or queried with recursive methods
 
 ---
+class: center, middle, inverse
 
+# Thank You
 
+Adam Brenecki, Adrian Colbert
 
+adambrenecki.github.io/non-relational-databases
 
-
-
-
-
+[download slides](https://github.com/adambrenecki/non-relational-databases/archive/master.zip)
 
     </textarea>
     <script src="http://gnab.github.io/remark/downloads/remark-0.6.3.min.js" type="text/javascript">
