--- a/index.html
+++ b/index.html
@@ -235,7 +235,13 @@ class: center, middle, inverse
 ###Example: Graph-Oriented Object Database Model (GOOD)
 
 - Nodes with relationships
+
 - Comparable to a multidimensional linked list
+
+- Updates, additions and deletions are performed just like a linked list
+
+- Queries performed recursively, often through macros
+
 - Far more variations than just the example of GOOD
 
 .footnote.citation[(Gyssens et. al., 1994)]
@@ -245,6 +251,10 @@ class: center, middle, inverse
 - Functions like a multidimensional linked list
 - Depending on implementation, can be constructed and queried with a common programming language, like C++
 - Can be traversed or queried with recursive methods
+- Updates, additions and deletions are performed just like a linked list
+- For example, if wanted to delete all Classical Music, delete the Info node with String 'Classical Music'
+- Queries tend to involve performing transforming actions on the database which results in another database graph, usually temporary.
+- 
 
 ---
 
@@ -256,10 +266,10 @@ class: center, middle, inverse
 
 ## Why use a graph database?
 
-- Modern applications that emphasise the connections between data as much as, if not more than, the data itself
-- Primary example is social networking due to many-to-many associations
+- Connections between data as as important as data itself, or more so
+- Obvious example is social networking due to many-to-many associations
 
-.footnote.citation{(Angles & Gutierrez, 2008)]
+.footnote.citation[(Angles & Gutierrez, 2008) (Holzschuher & Peinl, 2013)]
 
 
 
