--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@ class: center, middle, inverse
 .footnote.citation{(Angles & Gutierrez, 2008)]
 
 ---
+
+# Bibliography
+
+TODO: EXPORT BIBLIOGRAPHY FROM ZOTERO
+
+???
+
+This is our bibliography.
+
+If you'd like to know more about document-oriented databases, *CouchDB: The Definitive Guide* by Chris Anderson is an excellent resource; it includes examples of building a real-world blog engine using nothing but CouchDB.
+
+---
 class: center, middle, inverse
 
 # Thank You
