Add note about Camlistore to bibliography presenter notes

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ TODO: EXPORT BIBLIOGRAPHY FROM ZOTERO
 
 This is our bibliography.
 
-If you'd like to know more about document-oriented databases, *CouchDB: The Definitive Guide* by Chris Anderson is an excellent resource; it includes examples of building a real-world blog engine using nothing but CouchDB.
+If you'd like to know more about document-oriented databases, *CouchDB: The Definitive Guide* by Chris Anderson is an excellent resource; it includes examples of building a real-world blog engine using nothing but CouchDB. Camlistore is also a really interesting project that's worth checking out.
 
 ---
 class: center, middle, inverse
