Add citation for Mongo indexes

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ mongo.blogPosts.find({'address.suburb': {$in: ['Adelaide', 'North Adelaide']}})
 
 Sadly, Mongo doesn't support anything analogous to SQL `JOIN`s.
 
-.footnote.citation[(Kleinman 2013)]
+.footnote.citation[(Kleinman 2014, Kleinman 2013)]
 
 ???
 
