Remove chapter number from citation

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ So, document-oriented DBMSes store collections of these documents. Some DBMSes a
 }
 ```
 
-.footnote.citation[(Anderson 2010 ch. 1)]
+.footnote.citation[(Anderson 2010)]
 
 ???
 
