Make download links appear on hover

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ class: center, middle, inverse
 Adam Brenecki, Adrian Colbert  
 adambrenecki.github.io/non-relational-databases
 
+<a href='https://github.com/adambrenecki/non-relational-databases/archive/master.zip' class='dl-link'>download slides</a>
+
 ---
 ## What is a non-relational database?
 
@@ -558,11 +560,10 @@ class: center, middle, inverse
 
 # Thank You
 
-Adam Brenecki, Adrian Colbert
-
+Adam Brenecki, Adrian Colbert  
 adambrenecki.github.io/non-relational-databases
 
-[download slides](https://github.com/adambrenecki/non-relational-databases/archive/master.zip)
+<a href='https://github.com/adambrenecki/non-relational-databases/archive/master.zip' class='dl-link'>download slides</a>
 
     </textarea>
     <script src="http://gnab.github.io/remark/downloads/remark-0.6.3.min.js" type="text/javascript">
