--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@ class: center, middle, inverse
 
 Focusing on the GOOD model
 
+???
+
+Graph-Oriented Object Database
 ---
 
 ![Evolution of databases](images/evolution_of_databases.png)
